--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit push",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:reset": "tsx ./scripts/reset.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
@@ -26,7 +27,9 @@
     "lucide-react": "^0.439.0",
     "next": "14.2.10",
     "next-themes": "^0.3.0",
+    "ra-data-simple-rest": "^5.2.2",
     "react": "^18",
+    "react-admin": "^5.2.2",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
